--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
 
-            <!-- Events Section -->
+            <!-- Events Section (Temp until we get bg images working for events)-->
             <LinearLayout
                 android:id="@+id/EventsSection"
                 android:layout_width="match_parent"
@@ -89,48 +89,94 @@
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
                 android:elevation="4dp"
-                android:onClick="openEventsPage">
+                android:onClick="openNewsPage">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="EVENTS"
+                    android:text="NEWS"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="8dp">
+                    android:text="Example Event 1"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:onClick="openEvents"/>
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        android:background="@color/maize"
-                        android:padding="8dp"
-                        android:onClick="openEvent1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Example Event 2"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:onClick="openEvents"/>
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        android:background="@color/maize"
-                        android:padding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:onClick="openEvent2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Example Event 3"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/white"
+                    android:onClick="openEvents"/>
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        android:background="@color/maize"
-                        android:padding="8dp"
-                        android:layout_marginStart="8dp"
-                        android:onClick="openEvent3"/>
-                </LinearLayout>
             </LinearLayout>
+
+                <!-- WIP -->
+<!--            <!- Events Section With BG Image-->
+<!--            <LinearLayout-->
+<!--                android:id="@+id/EventsSection"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@color/blue"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="16dp"-->
+<!--                android:layout_marginBottom="16dp"-->
+<!--                android:elevation="4dp"-->
+<!--                android:onClick="openEventsPage">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="EVENTS"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textStyle="bold" />-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:paddingTop="8dp">-->
+
+<!--                    <View-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="80dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@color/maize"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:onClick="openEvent1"/>-->
+
+<!--                    <View-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="80dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@color/maize"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:onClick="openEvent2"/>-->
+
+<!--                    <View-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="80dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="@color/maize"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:onClick="openEvent3"/>-->
+<!--                </LinearLayout>-->
+<!--            </LinearLayout>-->
 
             <View
                 android:layout_width="match_parent"
