--- a/app/src/main/res/layout/content_academic_calendar.xml
+++ b/app/src/main/res/layout/content_academic_calendar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_department_information">
+    tools:showIn="@layout/app_bar_academic_calendar">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,8 +21,7 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-        <!-- Department information Section -->
-            <!--Schools/Colleges-->
+            <!--Academic Calendar-->
             <LinearLayout
                 android:id="@+id/containerLayout"
                 android:layout_width="match_parent"
@@ -36,52 +35,25 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Schools/Colleges"
+                    android:text="Event"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Department Name/link"
+                    android:text="Date of event"
                     android:paddingTop="8dp"
                     android:textColor="@color/white" />
 
             </LinearLayout>
-
-            <!--Offices/Centers-->
-            <LinearLayout
-                android:id="@+id/containerLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/blue"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:layout_marginBottom="16dp"
-                android:elevation="4dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Offices/Centers"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Department Name/link"
-                    android:paddingTop="8dp"
-                    android:textColor="@color/white" />
-
-            </LinearLayout>
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
-
         </LinearLayout>
     </ScrollView>
+
     <fragment
-        android:id="@+id/nav_host_fragment_content_department_information"
+        android:id="@+id/nav_host_fragment_content_academic_calendar"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -89,5 +61,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation3" />
+        app:navGraph="@navigation/mobile_navigation4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
