--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -82,52 +82,6 @@
                 android:layout_height="16dp" />
 
             <!-- Events Section (Temp until we get bg images working for events)-->
-            <LinearLayout
-                android:id="@+id/EventsSection"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/blue"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:layout_marginBottom="16dp"
-                android:elevation="4dp"
-                android:onClick="openEventsPage">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="EVENTS"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Example Event 1"
-                    android:paddingTop="8dp"
-                    android:textColor="@color/white"
-                    android:onClick="openEvents"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Example Event 2"
-                    android:paddingTop="8dp"
-                    android:textColor="@color/white"
-                    android:onClick="openEvents"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Example Event 3"
-                    android:paddingTop="8dp"
-                    android:textColor="@color/white"
-                    android:onClick="openEvents"/>
-
-            </LinearLayout>
-
-                <!-- WIP -->
-<!--            <!- Events Section With BG Image-->
 <!--            <LinearLayout-->
 <!--                android:id="@+id/EventsSection"-->
 <!--                android:layout_width="match_parent"-->
@@ -139,7 +93,6 @@
 <!--                android:elevation="4dp"-->
 <!--                android:onClick="openEventsPage">-->
 
-
 <!--                <TextView-->
 <!--                    android:layout_width="wrap_content"-->
 <!--                    android:layout_height="wrap_content"-->
@@ -147,48 +100,130 @@
 <!--                    android:textColor="@color/white"-->
 <!--                    android:textStyle="bold" />-->
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
 <!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal"-->
-<!--                    android:paddingTop="8dp">-->
+<!--                    android:text="Example Event 1"-->
+<!--                    android:paddingTop="8dp"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:onClick="openEvents"/>-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/event1"-->
-<!--                        android:layout_width="0dp"-->
-<!--                        android:layout_height="80dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:scaleType="centerCrop"-->
-<!--                        android:layout_centerInParent="true"-->
-<!--                        android:background="@color/maize"-->
-<!--                        android:padding="8dp"-->
-<!--                        android:onClick="openEvent1"/>-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Example Event 2"-->
+<!--                    android:paddingTop="8dp"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:onClick="openEvents"/>-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/event2"-->
-<!--                        android:layout_width="0dp"-->
-<!--                        android:layout_height="80dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:scaleType="centerCrop"-->
-<!--                        android:layout_centerInParent="true"-->
-<!--                        android:background="@color/maize"-->
-<!--                        android:padding="8dp"-->
-<!--                        android:layout_marginStart="8dp"-->
-<!--                        android:onClick="openEvent2"/>-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Example Event 3"-->
+<!--                    android:paddingTop="8dp"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:onClick="openEvents"/>-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/event3"-->
-<!--                        android:layout_width="0dp"-->
-<!--                        android:layout_height="80dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:scaleType="centerCrop"-->
-<!--                        android:layout_centerInParent="true"-->
-<!--                        android:background="@color/maize"-->
-<!--                        android:padding="8dp"-->
-<!--                        android:layout_marginStart="8dp"-->
-<!--                        android:onClick="openEvent3"/>-->
-<!--                </LinearLayout>-->
 <!--            </LinearLayout>-->
+
+                <!-- WIP -->
+<!--            <!- Events Section With BG Image-->
+            <LinearLayout
+                android:id="@+id/EventsSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/blue"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:layout_marginBottom="16dp"
+                android:elevation="4dp"
+                android:onClick="openEventsPage">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="EVENTS"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp">
+
+                    <ImageView
+                        android:id="@+id/event1"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:scaleType="centerCrop"
+                        android:layout_centerInParent="true"
+                        android:background="@color/maize"
+                        android:padding="8dp"
+                        android:onClick="openEvent1"/>
+
+                    <ImageView
+                        android:id="@+id/event2"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:scaleType="centerCrop"
+                        android:layout_centerInParent="true"
+                        android:background="@color/maize"
+                        android:padding="8dp"
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvent2"/>
+
+                    <ImageView
+                        android:id="@+id/event3"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:scaleType="centerCrop"
+                        android:layout_centerInParent="true"
+                        android:background="@color/maize"
+                        android:padding="8dp"
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvent3"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/EventTitles"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="openEvents"
+                        android:paddingTop="8dp"
+                        android:text="Example Event 1"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvents"
+                        android:paddingTop="8dp"
+                        android:text="Example Event 2"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:onClick="openEvents"
+                        android:paddingTop="8dp"
+                        android:text="Example Event 3"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
