--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -189,40 +189,40 @@
                         android:onClick="openEvent3"/>
                 </LinearLayout>
 
-                <LinearLayout
+            <LinearLayout
                     android:id="@+id/EventTitles"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:paddingTop="8dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:onClick="openEvents"
-                        android:paddingTop="8dp"
-                        android:text="Example Event 1"
-                        android:textColor="@color/white" />
+                <!--    <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="openEvents"
+                    android:paddingTop="8dp"
+                    android:text="Example Event 1"
+                    android:textColor="@color/white" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:onClick="openEvents"
-                        android:paddingTop="8dp"
-                        android:text="Example Event 2"
-                        android:textColor="@color/white" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:onClick="openEvents"
+                    android:paddingTop="8dp"
+                    android:text="Example Event 2"
+                    android:textColor="@color/white" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:onClick="openEvents"
-                        android:paddingTop="8dp"
-                        android:text="Example Event 3"
-                        android:textColor="@color/white" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:onClick="openEvents"
+                    android:paddingTop="8dp"
+                    android:text="Example Event 3"
+                    android:textColor="@color/white" />-->
 
-                </LinearLayout>
+            </LinearLayout>
             </LinearLayout>
 
             <View
@@ -249,7 +249,7 @@
                     android:textStyle="bold" />
 
                 <!--Comment these out when using the DB-->
-                <TextView
+<!--                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Example News 1"
@@ -271,7 +271,7 @@
                     android:text="Example News 3"
                     android:paddingTop="8dp"
                     android:textColor="@color/white"
-                    android:onClick="openNews3"/>
+                    android:onClick="openNews3"/>-->
 
             </LinearLayout>
 
