--- a/app/src/main/res/layout/activity_announcements.xml
+++ b/app/src/main/res/layout/activity_announcements.xml
@@ -9,6 +9,7 @@
     tools:context=".AlertsActivity">
 
     <!-- Main Content Layout -->
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,6 +24,7 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <!-- RecyclerView for Announcements -->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewAnnouncements"
             android:layout_width="match_parent"
@@ -30,7 +32,29 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:padding="16dp"
             android:clipToPadding="false"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            style="@android:style/Widget.ListView.White"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:tint="#FFFDFD"
+            app:backgroundTint="#FDFDFD"
+            app:layout_anchor="@+id/recyclerViewAnnouncements"
+            app:layout_anchorGravity="end|bottom"
+            app:srcCompat="@drawable/ic_send"
+            app:useCompatPadding="true" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -43,6 +67,8 @@
         app:menu="@menu/activity_main_drawer"
         app:headerLayout="@layout/nav_header_main"
         android:background="#00274C"
-        app:itemTextColor="#FFFFFF"/>
+        app:itemTextColor="#FFFFFF">
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
