--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -145,13 +145,15 @@
                     android:layout_height="wrap_content"
                     android:text="EVENTS"
                     android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:onClick="openEventsPage"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingTop="8dp">
+                    android:paddingTop="8dp"
+                    android:onClick="openEventsPage">
 
                     <ImageView
                         android:id="@+id/event1"
@@ -162,7 +164,7 @@
                         android:layout_centerInParent="true"
                         android:background="@color/maize"
                         android:padding="8dp"
-                        android:onClick="openEvent1"/>
+                        android:onClick="openEventsPage"/>
 
                     <ImageView
                         android:id="@+id/event2"
@@ -174,7 +176,7 @@
                         android:background="@color/maize"
                         android:padding="8dp"
                         android:layout_marginStart="8dp"
-                        android:onClick="openEvent2"/>
+                        android:onClick="openEventsPage"/>
 
                     <ImageView
                         android:id="@+id/event3"
@@ -186,7 +188,7 @@
                         android:background="@color/maize"
                         android:padding="8dp"
                         android:layout_marginStart="8dp"
-                        android:onClick="openEvent3"/>
+                        android:onClick="openEventsPage"/>
                 </LinearLayout>
 
             <LinearLayout
